--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,8 @@
 
     <title>Marketplace for Slack ｜ Sell and Buy Among Coworkers - Home</title>
     <link rel="shortcut icon" type="image/jpg" href="assets/icons/marketplacefavicon.ico" />
-    <script src="https://cdn.jsdelivr.net/npm/dompurify/dist/purify.min.js" integrity="sha256-qC8Lb8Kuf+7eFjyMCnpTs3ROmu80jdxpOpgMXOvgORg=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="assets/js/purify.min.js"></script>
+    
 
 </head>
 
